...
                android:layout_height="match_parent" />

            <Button
                android:id="@+id/butSubscribe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subscribe_label"
                android:visibility="gone"
                android:layout_marginVertical="4dp"
                tools:visibility="visible" />

            <Button
                android:id="@+id/butRestore"
...
                android:scaleType="fitXY"
                android:padding="12dp"
                app:srcCompat="@drawable/ic_filter_white"
                tools:visibility="visible" />

            <ImageButton
                android:id="@+id/butShowSettings"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/show_feed_settings_label"
                android:scaleType="fitXY"
                android:padding="12dp"
...
