<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/footer"
        style="@android:style/ButtonBar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/butConfirm"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm_label" />

        <Button
            android:id="@+id/butCancel"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel_label" />
    </LinearLayout>

    <ListView
        android:id="@+id/feedlist"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/footer"
        android:layout_alignParentTop="true"
        tools:listitem="@android:layout/simple_list_item_multiple_choice" >
    </ListView>

</RelativeLayout>