...
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:layout_marginHorizontal="16dp"
                android:name="de.danoeh.antennapod.ui.discovery.QuickFeedDiscoveryFragment" />

            <TextView
                android:id="@+id/addViaUrlButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_podcast_by_url"
                app:drawableStartCompat="@drawable/ic_feed"
                app:drawableLeftCompat="@drawable/ic_feed"
                style="@style/AddPodcastTextView" />
...
